<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">I\’m a button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_message">Login</string>
    <string name="login_name">Login name</string>
    <string name="pw">password</string>
    <string name="paw">password</string>
    <string name="radio_b">radio button</string>
    <string name="c_b">check box</string>
    <string name="sw">"What does this do?"</string>


    <string name="lgn">Login</string>
    <string name="gl">"Go to login"</string>
    <string name="gi">"Go to list"</string>
    <string name="ga">"Go to start"</string>
    <string name="userName">"Go t</string>



    <string name="q1">"Quit?"</string>
    <string name="y1">"Yes"</string>
    <string name="y2">"No"</string>
</resources>
