<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="fill"
    tools:context="com.example.oliver.androidlabs.LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_message" />

    <EditText
        android:id="@+id/userName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pw" />

    <EditText
        android:id="@+id/passWord1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/paw" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/flag"
       android:layout_gravity="fill"
        />


    <Button
        android:id="@+id/lgn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lgn" />

    <Button
            android:id="@+id/gi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gi" />

        <Button
            android:id="@+id/ga"
            android:layout_below="@+id/gi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ga" />


</LinearLayout>
