<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:columnCount="2"
    android:rowCount="3"
    tools:context="com.example.oliver.androidlabs.ListItemsActivity">


    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/c_b" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/radio_b" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="190dp"
        android:layout_height="41dp"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/sw" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="132dp"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/buttonGA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/ga" />

    <Button
        android:id="@+id/buttonGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/gl" />


</GridLayout>
