<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="75dp" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <Button
            android:id="@+id/bb1"
            android:text="@string/y1"

            />

        <Button
            android:id="@+id/bb2"
            android:text="@string/y2"
        />
    </GridLayout>



</LinearLayout>